# wcag-auditor

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  eval_baseline.json  pyproject.toml
.github/workflows/: ci.yml
docs/: BRANCH_PROTECTION.md
scripts/: apply_branch_protection.sh  check_regression.py  download_axe.py  verify.py
src/wcag_auditor/: auditor.py  axe_runner.py  cli.py  database.py  eval_metrics.py  fix_engine.py  llm_client.py  models.py
tests/eval/: conftest.py  test_baseline.py
tests/fixtures/: golden_dataset.json
tests/fixtures/html/: duplicate_id_001.html  keyboard_trap_001.html  missing_alt_001.html  missing_button_text_001.html  missing_form_label_001.html  no_lang_001.html
tests/unit/: _golden_image_alt.py  test_auditor.py  test_axe_runner.py  test_check_regression.py  test_database.py  test_fix_engine.py  test_fixture_audit_smoke.py  test_llm_client.py  test_llm_sanitizer.py  test_models.py  test_template_regression.py
